# the_bot

./: .gitignore  pyproject.toml
tests/: test_run_the_bot.py
the_bot/: constants.py
the_bot/api/: api.py
the_bot/helpers/: auto_login.py  browser_actions.py  logging_helper.py  read_parameters_for_users.py  session.py  update_scheduler.py
the_bot/models/: operations_model.py
the_bot/services/: execute_operations.py  notification_services.py
the_bot_infra/: app.py
the_bot_infra/tests/unit/: test_the_bot_infra_stack.py
the_bot_infra/the_bot_infra/: the_bot_infra_stack.py
