[tool.poetry]
name = "the-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "the_bot"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
brotlipy = "^0.7.0"
backoff = "^2.2.1"
curl-cffi = "^0.6.4"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["all"], version = "^2.38.1"}
aws-cdk-lib = "^2.143.0"
pytest = "^8.2.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
